Test/dafny0/NestedPatterns.dfy.expect
NestedPatterns.dfy(75,23): Error: Duplicate parameter name: h
NestedPatterns.dfy(83,20): Error: Duplicate parameter name: h
NestedPatterns.dfy(91,23): Error: Duplicate parameter name: e
NestedPatterns.dfy(107,7): Error: the case pattern is a 2-element tuple, while the match expression is a 3-element tuple
4 resolution/type errors detected in NestedPatterns.dfy
